# Qt-Project

DigitalCluster/: CMakeLists.txt  ClusterScreen.qml  Main.qml  README.md  main.cpp
DigitalCluster/components/: CircularGauge.qml  InfoTile.qml  MiniGauge.qml
Infotainment/: CMakeLists.txt  HomeScreen.qml  Main.qml  MediaService.cpp  MediaService.h  PageNavigator.h  README.md  Theme.js  WeatherService.js  main.cpp  resources.qrc
Infotainment/pages/: DashboardPage.qml  MusicPage.qml  PhonePage.qml  SettingsPage.qml  WeatherPage.qml
